feat(97341, 97342): [User][API] Service Catalog: List & Search And Upload Helper
